--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,11 +1,3 @@
 {
-  "auth": {
-    "customerorderingsys": {
-      "customAuth": true,
-      "dependsOn": [],
-      "providerPlugin": "awscloudformation",
-      "service": "Cognito",
-      "serviceType": "imported"
-    }
-  }
+  "auth": {}
 }
