--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -31,5 +31,31 @@
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
     }
+  },
+  "parameters": {
+    "AMPLIFY_storage_customerorderingsys6c99340a_bucketName": {
+      "usedBy": [
+        {
+          "category": "storage",
+          "resourceName": "customerorderingsys6c99340a"
+        }
+      ]
+    },
+    "AMPLIFY_storage_customerorderingsys6c99340a_region": {
+      "usedBy": [
+        {
+          "category": "storage",
+          "resourceName": "customerorderingsys6c99340a"
+        }
+      ]
+    }
+  },
+  "storage": {
+    "customerorderingsys6c99340a": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3",
+      "serviceType": "imported"
+    }
   }
 }
